--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -11,6 +11,12 @@ main {
 .strike {
     text-decoration: line-through;
 }
+.nav-avatar{
+    max-width: 45px;
+    max-height: 45px;
+    border-radius: 50%;
+    margin: 10px 0;
+}
 /*.flex1{*/
 /*    flex: 1 !important;*/
 /*}*/
